--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.context-path=/
 server.port=8080
 
 
-book.author=Chris
-book.name=springboot
-book.pinyin=springboot
+#book.author=\u4E50\u5C0F\u5531\u5440
+#book.name=springboot
+#book.pinyin=springboot
 
 
 server.tomcat.uri-encoding=UTF-8
