--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,4 @@
-server.context-path=/
-server.port=8080
-
-
-#book.author=\u4E50\u5C0F\u5531\u5440
-#book.name=springboot
-#book.pinyin=springboot
-
+spring.profiles.active=dev
 
 server.tomcat.uri-encoding=UTF-8
 spring.http.encoding.charset=UTF-8
@@ -13,7 +6,8 @@ spring.http.encoding.enabled=true
 spring.http.encoding.force=true
 spring.messages.encoding=UTF-8
 
-
+logging.file=/home/sang/workspace/log.log
+logging.level.org.springframework.web=debug
 
 
 
