--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -6,12 +6,8 @@ server.port=9090
 #book.name=springboot
 #book.pinyin=springboot
 
-
-server.tomcat.uri-encoding=UTF-8
-spring.http.encoding.charset=UTF-8
-spring.http.encoding.enabled=true
-spring.http.encoding.force=true
-spring.messages.encoding=UTF-8
-
-logging.file=/home/sang/workspace/log.log
-logging.level.org.springframework.web=debug
+#mysql\u6570\u636E\u5E93\u914D\u7F6E
+spring.datasource.url=jdbc:mysql://localhost:3306/mybatis?useUnicode=true&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=111111
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
