--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,10 @@ spring.messages.encoding=UTF-8
 logging.file=/home/sang/workspace/log.log
 logging.level.org.springframework.web=debug
 
+book.author=\u4E50\u5C0F\u5531\u5440
+book.name=springboot
+book.pinyin=springboot
+
 
 
 
