--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ server.port=8080
 
 
 #mysql\u6570\u636E\u5E93\u914D\u7F6E
-spring.datasource.url=jdbc:mysql://localhost:3306/mybatis?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://localhost:3306/hibernate?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=111111
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
