--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,8 @@ book.author=\u4E50\u5C0F\u5531\u5440
 book.name=springboot
 book.pinyin=springboot
 
-
+mybatis.config-locations=classpath:mybatis/mybatis-config.xml
+mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 
 
 
