--- a/src/main/resources/application-prd.properties
+++ b/src/main/resources/application-prd.properties
@@ -7,7 +7,7 @@ server.port=9090
 #book.pinyin=springboot
 
 #mysql\u6570\u636E\u5E93\u914D\u7F6E
-spring.datasource.url=jdbc:mysql://localhost:3306/hibernate?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://sh-cdb-dyk0wjc9.sql.tencentcdb.com:63652/springboot?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=111111
+spring.datasource.password=123QWEasd
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
